--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,51 @@
-body{
-  background: red;
+html{
+  font-size: 62.5%;
 }
+
+body{
+  background: rgb(255, 255, 255);
+  padding: 0px 2rem;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+h1{
+  font-size: 3rem;
+}
+
+h2{
+  font-weight: 400;
+  font-size: 2rem;
+}
+
 h3{
+  font-size: 1.4rem;
   margin-top: 40px;
+}
+
+h4{
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+ul{
+  list-style: none;
+  padding-left: 0px;
+}
+
+span{
+  font-size: 1.4rem;
+}
+
+.usernameAndRating{
+  padding-right: 1rem;
+  color: rgb(108, 108, 108);
+  margin-top: 1rem;
+}
+
+.description{
+  width: 25%;
+}
+
+.hidden{
+  display: none;
 }
