--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,39 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>21 Savage Fans</title>
+  <title>How are you?</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>21 Savage</h1>
-  <h2>Why you trappin so hard?</h2>
+  <h1>How are you today?</h1>
+  <h2>A place to share how your day is going</h2>
+
+  <h3>Submit a username, a 1-10 rating for your day, and a description.</h3>
+
+  <form action="/messages" method="POST">
+    <input type="text" placeholder="Username" name="name">
+    <input type="number" placeholder="Rating" name="rating">
+    <input class="description" type="text" placeholder="Description" name="msg">
+
+    <button type="submit">Submit</button>
+  </form>
 
 
-  <h3>Messages</h3>
+  <h4>Feed</h4>
   <ul class="messages">
   <% for(var i=0; i<messages.length; i++) {%>
     <li class="message">
-      <span><%= messages[i].name %></span>
-      <span><%= messages[i].msg %></span>
-      <span><%= messages[i].thumbUp %></span>
-      <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
-      <span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span>
-      <span><i class="fa fa-trash" aria-hidden="true"></i></span>
+      <div class="usernameAndRating">
+        <span><%= `${messages[i].name} rated their day a` %></span>
+        <span><%= messages[i].rating %></span>
+      </div>
+        <span><%= messages[i].msg %></span>
+      <!-- <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
+      <span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span> -->
     </li>
   <% } %>
   </ul>
 
-  <h2>Add a message</h2>
-
-  <form action="/messages" method="POST">
-    <input type="text" placeholder="name" name="name">
-    <input type="text" placeholder="message" name="msg">
-    <button type="submit">Submit</button>
-  </form>
-
   <script src="main.js"></script>
-
 </body>
 </html>
